src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int64__bit_not_int64.snap
---
source: src/expr/src/scalar/func/impls/int64.rs
expression: "#[sqlfunc(sqlname = \"~\", preserves_uniqueness = true, inverse = to_unary!(BitNotInt64))]\nfn bit_not_int64(a: i64) -> i64 {\n    !a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct BitNotInt64;
impl crate::func::EagerUnaryFunc for BitNotInt64 {
    type Input<'a> = i64;
    type Output<'a> = i64;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        bit_not_int64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(BitNotInt64)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for BitNotInt64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("~")
    }
}
fn bit_not_int64(a: i64) -> i64 {
    !a
}
