src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int64__cast_int64_to_uint64.snap
---
source: src/expr/src/scalar/func/impls/int64.rs
expression: "#[sqlfunc(\n    sqlname = \"bigint_to_uint8\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastUint64ToInt64),\n    is_monotone = true\n)]\nfn cast_int64_to_uint64(a: i64) -> Result<u64, EvalError> {\n    u64::try_from(a).or_else(|_| Err(EvalError::UInt64OutOfRange(a.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastInt64ToUint64;
impl crate::func::EagerUnaryFunc for CastInt64ToUint64 {
    type Input<'a> = i64;
    type Output<'a> = Result<u64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int64_to_uint64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastUint64ToInt64)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastInt64ToUint64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("bigint_to_uint8")
    }
}
fn cast_int64_to_uint64(a: i64) -> Result<u64, EvalError> {
    u64::try_from(a).or_else(|_| Err(EvalError::UInt64OutOfRange(a.to_string().into())))
}
